force-app/main/default/objects/Test_Case_Progress__c/Test_Case_Progress__c.object-meta.xml
<CustomObject>
    <label>Test Case Progress</label>
    <nameField>
        <displayFormat>TCP-{00000}</displayFormat>
        <label>Running No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases Progress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>