force-app/main/default/objects/Test_Case_Progress__c/fields/Expected_Pass__c.field-meta.xml
<CustomField>
    <fullName>Expected_Pass__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>