force-app/main/default/objects/Test_Case_Progress__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Module</label>
    <length>100</length>
    <type>Text</type>
</CustomField>