force-app/main/default/objects/Test_Case_Progress__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>