force-app/main/default/objects/Test_Case_Progress__c/fields/Positive_Negative_Case__c.field-meta.xml
<CustomField>
    <fullName>Positive_Negative_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Positive Case?</label>
    <type>Checkbox</type>
</CustomField>