force-app/main/default/objects/Test_Case_Progress__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Release</label>
    <length>200</length>
    <type>Text</type>
</CustomField>