force-app/main/default/objects/Test_Case_Progress__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Scope</label>
    <type>Checkbox</type>
</CustomField>