force-app/main/default/objects/Test_Case_Progress__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Start</fullName>
                <color>#F3D904</color>
                <label>Not Start</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <color>#666666</color>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Pass</fullName>
                <color>#78C953</color>
                <label>Pass</label>
            </value>
            <value>
                <fullName>Fail</fullName>
                <color>#FF6666</color>
                <label>Fail</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <color>#BBBBBB</color>
                <label>N/A</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#33CCFF</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Discussion</fullName>
                <color>#9999FF</color>
                <label>Discussion</label>
            </value>
            <value>
                <fullName>Known Issue</fullName>
                <color>#CC66CC</color>
                <label>Known Issue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>