force-app/main/default/objects/Test_Case_Progress__c/fields/Test_case_detail__c.field-meta.xml
<CustomField>
    <fullName>Test_case_detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Case Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>