force-app/main/default/objects/Test_Case_Progress__c/fields/Test_scenario_no__c.field-meta.xml
<CustomField>
    <fullName>Test_scenario_no__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Scenario (SC ID)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>