force-app/main/default/objects/Test_Case_Progress__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Period__c</columns>
    <columns>Tester_Name__c</columns>
    <columns>Module__c</columns>
    <columns>Test_scenario_no__c</columns>
    <columns>Test_scenario_detail__c</columns>
    <columns>Test_case_no__c</columns>
    <columns>Test_case_detail__c</columns>
    <columns>Expected_Pass__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tester_Name__c</field>
        <operation>equals</operation>
        <value>WILAWAN YIMLAMAI</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/27/2022 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>