force-app/main/default/objects/Test_Case_Progress__c/listViews/All_UAT_KYC_Review.listView-meta.xml
<ListView>
    <fullName>All_UAT_KYC_Review</fullName>
    <columns>NAME</columns>
    <columns>Period__c</columns>
    <columns>Tester_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Module__c</columns>
    <columns>Test_scenario_detail__c</columns>
    <columns>Test_case_no__c</columns>
    <columns>Test_case_detail__c</columns>
    <columns>Expected_Pass__c</columns>
    <columns>Actual_Result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/27/2022 12:00 AM</value>
    </filters>
    <label>All UAT KYC Review</label>
</ListView>