force-app/main/default/objects/Test_Case_Progress__c/listViews/All_UAT_Outbound_Juristic.listView-meta.xml
<ListView>
    <fullName>All_UAT_Outbound_Juristic</fullName>
    <columns>NAME</columns>
    <columns>Period__c</columns>
    <columns>Tester_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Module__c</columns>
    <columns>Test_scenario_no__c</columns>
    <columns>Test_scenario_detail__c</columns>
    <columns>Test_case_no__c</columns>
    <columns>Test_case_detail__c</columns>
    <columns>Expected_Pass__c</columns>
    <columns>Scope__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Period__c</field>
        <operation>equals</operation>
        <value>UAT</value>
    </filters>
    <filters>
        <field>Release__c</field>
        <operation>equals</operation>
        <value>Outbound Juristic - New Convert lead</value>
    </filters>
    <label>All UAT Outbound Juristic</label>
</ListView>